--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
 
         section {
-            max-width: 800px;
+            max-width: 90%; /* Ajuste para tornar o site mais responsivo */
             margin: 20px auto;
             padding: 20px;
             background-color: #FF69B4; /* Rosa vibrante */
@@ -35,7 +35,7 @@
         }
 
         p {
-            line-height: 1.5;
+            line-height: 1.6; /* Melhora a legibilidade */
         }
 
         footer {
