--- a/index.html
+++ b/index.html
@@ -9,25 +9,33 @@
             font-family: 'Comic Sans MS', cursive, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #FFD700; /* Amarelo vibrante */
+            background: linear-gradient(to bottom, #FFD700, #FFFF00); /* Gradiente de amarelo para amarelo claro */
             color: #333;
         }
 
         header {
-            background-color: #4CAF50;
-            color: #fff;
+            background: linear-gradient(to right, #4CAF50, #008000);
+            color: #ffcc00;
             text-align: center;
             padding: 1em;
-            animation: slideDown 1s ease-out; /* Adicionando uma animação de slide-down */
+            animation: slideDown 1s ease-out;
+            font-family: 'Arial', sans-serif;
         }
 
         section {
-            max-width: 90%; /* Ajuste para tornar o site mais responsivo */
+            max-width: 90%;
             margin: 20px auto;
             padding: 20px;
-            background-color: #FF69B4; /* Rosa vibrante */
+            background: linear-gradient(to bottom, #FF69B4, #FF1493); /* Gradiente de rosa para rosa escuro */
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            animation: fadeIn 2s ease-out; /* Adicionando uma animação de fade-in */
+            animation: fadeIn 2s ease-out;
+        }
+
+        footer {
+            background: linear-gradient(to right, #333, #000);
+            color: #fff;
+            text-align: center;
+            padding: 1em;
         }
 
         h1, h2 {
@@ -35,7 +43,7 @@
         }
 
         p {
-            line-height: 1.6; /* Melhora a legibilidade */
+            line-height: 1.6;
         }
 
         .products {
@@ -58,14 +66,6 @@
             transform: scale(1.05);
         }
 
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1em;
-        }
-
-        /* Animação de fade-in */
         @keyframes fadeIn {
             from {
                 opacity: 0;
@@ -75,7 +75,6 @@
             }
         }
 
-        /* Animação de slide-down */
         @keyframes slideDown {
             from {
                 transform: translateY(-50px);
