--- a/index.html
+++ b/index.html
@@ -66,6 +66,18 @@
             transform: scale(1.05);
         }
 
+        .scroll-to-contact {
+            display: block;
+            margin: 20px auto;
+            padding: 10px;
+            background-color: #3498db;
+            color: #fff;
+            font-size: 16px;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+
         @keyframes fadeIn {
             from {
                 opacity: 0;
@@ -114,6 +126,8 @@
         <p>Telefone: 7199133923</p>
         <p>Email: <a href="mailto:loliconaoquadrado123@gmail.com">loliconaoquadrado123@gmail.com</a></p>
     </section>
+
+    <a href="#contact" class="scroll-to-contact">Ir para Contato</a>
 
     <footer>
         <p>&copy; 2023 dogelo - Balas de Gelatina</p>
