--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
         <h2>Sobre Nossas Deliciosas Balas de Gelatina</h2>
         <p>Na "dogelo", acreditamos que cada bala de gelatina é uma pequena explosão de felicidade. Nossas guloseimas são cuidadosamente preparadas para proporcionar uma experiência de sabor única, combinando texturas suaves e sabores intensos.</p>
         <p>Cada mordida é um convite para um mundo de doçura, e a qualidade premium dos nossos ingredientes é o que torna nossas balas de gelatina verdadeiramente irresistíveis. Descubra o prazer de saborear momentos doces com "dogelo".</p>
+
+        <a href="#contact" class="scroll-to-contact">Fale conosco</a>
     </section>
 
     <section class="products">
@@ -126,8 +128,6 @@
         <p>Telefone: 7199133923</p>
         <p>Email: <a href="mailto:loliconaoquadrado123@gmail.com">loliconaoquadrado123@gmail.com</a></p>
     </section>
-
-    <a href="#contact" class="scroll-to-contact">Ir para Contato</a>
 
     <footer>
         <p>&copy; 2023 dogelo - Balas de Gelatina</p>
