--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         }
 
         h1, h2 {
-            color: #4CAF50;
+            color: #fff; /* Alterado para branco para melhor legibilidade no header */
         }
 
         p {
@@ -108,7 +108,7 @@
         <p>Na "dogelo", acreditamos que cada bala de gelatina é uma pequena explosão de felicidade. Nossas guloseimas são cuidadosamente preparadas para proporcionar uma experiência de sabor única, combinando texturas suaves e sabores intensos.</p>
         <p>Cada mordida é um convite para um mundo de doçura, e a qualidade premium dos nossos ingredientes é o que torna nossas balas de gelatina verdadeiramente irresistíveis. Descubra o prazer de saborear momentos doces com "dogelo".</p>
 
-        <a href="#contact" class="scroll-to-contact">Fale conosco</a>
+        <a href="#contact" class="scroll-to-contact">Ir para Contato</a>
     </section>
 
     <section class="products">
@@ -123,10 +123,9 @@
         </div>
     </section>
 
-    <section>
+    <section id="contact">
         <h2>Contato</h2>
-        <p>Telefone: 7199133923</p>
-        <p>Email: <a href="mailto:loliconaoquadrado123@gmail.com">loliconaoquadrado123@gmail.com</a></p>
+        <p>Telefone: 7199133923</        <p>Email: <a href="mailto:loliconaoquadrado123@gmail.com">loliconaoquadrado123@gmail.com</a></p>
     </section>
 
     <footer>
