--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
 
     <section id="contact">
         <h2>Contato</h2>
-        <p>Telefone: 7199133923</        <p>Email: <a href="mailto:loliconaoquadrado123@gmail.com">loliconaoquadrado123@gmail.com</a></p>
+        <p>Telefone: 7199133923</p>
+        <p>Email: <a href="mailto:dogelooficial@gmail.com">dogelooficial@gmail.com</a></p>
     </section>
 
     <footer>
